--- a/css/bikes.css
+++ b/css/bikes.css
@@ -107,5 +107,6 @@
     @media only screen and (min-width: 620px){ 
         .bike_grid{
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            margin: 0;
          }
     }
