--- a/css/bikes.css
+++ b/css/bikes.css
@@ -34,15 +34,17 @@
     margin: 0;
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
-    
 }
 
-
 .bike_grid{
-    margin: 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    text-align: center;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  }
+ 
+ .bike_grid_items{
+    margin: auto;
+}
 
 .bike_card{
     padding: 0;
@@ -101,12 +103,27 @@
         }
         .bike_subcategories{
             margin: 5rem ;
-
         }
+        .header_container{
+            width: 300px;
+        }
+        .bike_card{
+            margin-left: 0.5rem;
+            width: 300px;
+        }
+        .bike_grid_items{
+            width: 300px;
+        }
+        .bike_header{
+            font-size: 2rem;
+        }
+    
+        
     }
     @media only screen and (min-width: 620px){ 
         .bike_grid{
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr, ));
             margin: 0;
          }
+         
     }
