--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,6 @@
 .gallery{
-    height: 100vh;
+    min-height: 100vh;
 }
-
 
 .grid_container{
    padding: 5rem;
@@ -17,6 +16,7 @@ html{
 }
 
 .gallery_card{
+    width: 300px;
     padding: 0;
     margin: 1rem;
     background: white;
@@ -37,11 +37,21 @@ html{
 
 .gallery_grid{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  }
 
+ @media(max-width: 1000px){
+    .grid_container{
+        margin: auto;
+        padding: 0;
+    }
 
-
+    .gallery_card{
+     margin: 1rem auto ;
+     
+    }   
+    
+ }
     @media only screen and (min-width: 620px){ 
         .gallery_grid{
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
