--- a/css/trails.css
+++ b/css/trails.css
@@ -33,6 +33,12 @@
                 background-image: linear-gradient(to right bottom, rgba(0, 145, 202, 0.85), rgba(1, 0, 36, 0.85)); }
                 .trail_card__side--back-3 {
                     background-image: linear-gradient(to right bottom, rgba(214, 182, 0, 0.85), rgba(73, 50, 0, 0.85)); }
+                    .trail_card__side--back-4 {
+                        background-image: linear-gradient(to right bottom, rgba(214, 43, 0, 0.85), rgba(73, 2, 0, 0.85)); }
+                        .trail_card__side--back-5 {
+                            background-image: linear-gradient(to right bottom, rgba(178, 0, 214, 0.85), rgba(24, 8, 31, 0.85)); }
+                            .trail_card__side--back-6 {
+                                background-image: linear-gradient(to right bottom, rgba(0, 224, 157, 0.85), rgba(0, 46, 73, 0.85)); }
     .trail_card:hover .trail_card__side--front {
       transform: rotateY(-180deg); }
     .trail_card:hover .trail_card__side--back {
@@ -51,6 +57,12 @@
             background-image: url(/imgs/alternative_background.jpg); }
             .trail_card__picture--3 {
                 background-image: url(/imgs/bike_gallery_mountains.jpg); }
+                .trail_card__picture--4 {
+                    background-image: url(/imgs/bike_gallery_jump.jpg); }
+                    .trail_card__picture--5 {
+                        background-image: url(/imgs/bike_gallery_roadrace.jpg); }
+                        .trail_card__picture--6 {
+                            background-image: url(/imgs/bike_gallery_trails.jpg); }
     .trail_card__heading {
       font-size: 2.8rem;
       font-weight: 300;
@@ -71,6 +83,12 @@
             background-image: linear-gradient(to right bottom, rgba(0, 145, 202, 0.85), rgba(1, 0, 36, 0.85));  }
             .trail_card__heading-span--3 {
                 background-image: linear-gradient(to right bottom, rgba(214, 182, 0, 0.85), rgba(73, 50, 0, 0.85));}
+                .trail_card__heading-span--4 {
+                    background-image: linear-gradient(to right bottom, rgba(214, 43, 0, 0.85), rgba(73, 2, 0, 0.85)); }
+                    .trail_card__heading-span--5 {
+                        background-image: linear-gradient(to right bottom, rgba(178, 0, 214, 0.85), rgba(24, 8, 31, 0.85)); }
+                        .trail_card__heading-span--6 {
+                            background-image: linear-gradient(to right bottom, rgba(0, 224, 157, 0.85), rgba(0, 46, 73, 0.85)); }
     .trail_card__details {
       padding: 3rem; }
       .trail_card__details ul {
@@ -150,7 +168,7 @@
     @media (max-width: 56.25em) {
       .row2 {
         max-width: 50rem;
-        padding: 0 3rem; } }
+        padding: 0 0rem; } }
     .row2::after {
       content: "";
       display: table;
