Worse but free map integration and some style changes

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ footer{
         text-decoration: none;
         display:block;
         padding-bottom: 0.5rem;
-        color: black;
+        color: white;
     }
 
    .social_link{
