--- a/css/service.css
+++ b/css/service.css
@@ -1,3 +1,9 @@
+
+html{
+    background-image: url(/imgs/background_secondary1.png);
+    background-size: cover;
+}
+
 .service_img{
     width: 50%;
 }
