--- a/css/trails.css
+++ b/css/trails.css
@@ -73,11 +73,25 @@ html{
             .trail_card__picture--3 {
                 background-image: url(/imgs/bike_gallery_mountains.jpg); }
                 .trail_card__picture--4 {
-                    background-image: url(/imgs/bike_gallery_jump.jpg); }
+                    background-image: url(/imgs/bike_gallery_roadrace.jpg); }
                     .trail_card__picture--5 {
-                        background-image: url(/imgs/bike_gallery_roadrace.jpg); }
+                        background-image: url(/imgs/bike_gallery_jump.jpg); }
                         .trail_card__picture--6 {
                             background-image: url(/imgs/bike_gallery_trails.jpg); }
+                            .trail_card__picture--7 {
+                              background-image: url(/imgs/trails_race.jpg); }
+                              .trail_card__picture--8 {
+                                background-image: url(/imgs/trails_downhill.jpg); }
+                                .trail_card__picture--9 {
+                                  background-image: url(/imgs/trails_family.jpg); }
+                                  .trail_card__picture--10 {
+                                    background-image: url(/imgs/melrose_abbey.jpg); }
+                                    .trail_card__picture--11 {
+                                      background-image: url(/imgs/dryburgh_abbey.jpg); }
+                                      .trail_card__picture--12 {
+                                        background-image: url(/imgs/bowhill_house.jpg); }
+                                        .trail_card__picture--13 {
+                                          background-image: url(/imgs/Smailholm_tower.jpg); }
     .trail_card__heading {
       font-size: 2.8rem;
       font-weight: 300;
@@ -98,12 +112,6 @@ html{
             background-image: linear-gradient(to right bottom, rgba(0, 145, 202, 0.85), rgba(1, 0, 36, 0.85));  }
             .trail_card__heading-span--3 {
                 background-image: linear-gradient(to right bottom, rgba(214, 182, 0, 0.85), rgba(73, 50, 0, 0.85));}
-                .trail_card__heading-span--4 {
-                    background-image: linear-gradient(to right bottom, rgba(214, 43, 0, 0.85), rgba(73, 2, 0, 0.85)); }
-                    .trail_card__heading-span--5 {
-                        background-image: linear-gradient(to right bottom, rgba(178, 0, 214, 0.85), rgba(24, 8, 31, 0.85)); }
-                        .trail_card__heading-span--6 {
-                            background-image: linear-gradient(to right bottom, rgba(0, 224, 157, 0.85), rgba(0, 46, 73, 0.85)); }
     .trail_card__details {
       padding: 3rem; }
       .trail_card__details ul {
