Added particle JS background

--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ a{
 .about{ 
     padding-top: 5rem;
     text-align: center;
-    background-image: url(/imgs/background_secondary1.png);
+    /* background-image: url(/imgs/background_secondary1.png); */
     background-size: cover;
     padding-bottom: 10rem;
 }
@@ -68,8 +68,25 @@ a{
     object-fit: cover;
 }
 
+#particles-js canvas {
+    display: block;
+    vertical-align: bottom;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
 
-
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
+}
 
 
 @media(max-width: 1000px){
