--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body{
     text-decoration: none;
     color: white;
     padding: 1rem;
-    display: block;
+    display: block;  
 }
 
 .search_bar{
@@ -76,6 +76,7 @@ body{
     justify-content: space-between;
     width: 30px;
     height: 21px;
+
 }
 
 .toggle-button .bar{
@@ -99,6 +100,27 @@ body{
     .container{
         flex-direction: column;
     }
+}
+/* Particle JS Background */
+
+#particles-js canvas {
+    display: block;
+    vertical-align: bottom;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -10;
+    top: 0;
+    left: 0
 }
 /* FOOTER */
 footer{
@@ -179,12 +201,13 @@ footer{
 @media(max-width: 1000px){
     .toggle-button{
         display: flex; 
+
     }
 
     .navbar-links{
         display:none; 
         width: 100%;
-    }
+    }    
 
     .navbar{
         flex-direction: column;
@@ -194,6 +217,7 @@ footer{
     .navbar-links ul{
         width:100%;
         flex-direction: column;
+        transition: 3s;
     }
 
     .navbar-links li{
@@ -202,6 +226,7 @@ footer{
 
     .navbar-links li a{
         padding: .5rem 1rem;
+
     }
     form{
         text-align: center;
@@ -210,6 +235,7 @@ footer{
     
     .navbar-links.active{
         display: flex;
+
     }
 
     .footer_a{
