--- a/css/trails.css
+++ b/css/trails.css
@@ -5,7 +5,7 @@ html{
 
 .trails_heading{
   color: white;
-  background-image: linear-gradient(to right bottom, rgba(78, 78, 78, 0.85), rgba(7, 7, 7, 0.85)); 
+  background-color: #333; 
   text-align: center;
   font-size:  3rem;
   width: 50%;
@@ -226,6 +226,8 @@ html{
           width: 90%;
           font-size:  1rem;
         }
+        .trail_card__heading {
+          font-size: 2rem;}
       }
 
       @media(max-width:400px){
