--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,8 @@ body{
     position: fixed;
     z-index: -10;
     top: 0;
-    left: 0
+    left: 0;
+    background-color: #acacac;
 }
 /* FOOTER */
 footer{
