--- a/css/trails.css
+++ b/css/trails.css
@@ -4,16 +4,17 @@ html{
 }
 
 .trails_heading{
-  color: white;
-  background-color: #333; 
-  text-align: center;
-  font-size:  3rem;
-  width: 50%;
-  margin: 3rem auto;
-  padding: 3rem 0;
+  min-height: 100vh;
+  background-color: white;
 }
 
-.section_trails{
+.trails_heading_secondary{
+ text-align: center;
+ font-size: 2rem;
+ margin-bottom: 5rem;
+}
+
+.card_containers{
    margin: 1rem;
 
 }
