--- a/css/bikes.css
+++ b/css/bikes.css
@@ -1,56 +1,85 @@
 .bike_info{
     background: white;
     min-height: 100vh;
+    padding-top: 3rem;
 }
 
-.important_info{
-    margin-left: 5rem;    
+.bike_header_image{
+    width: 50%;
 }
 
-.break_up{
-    display: none;
-}
-.bike_subcategories{
-    border: 2px solid black;
-    margin: 5rem 5rem;
-    padding: 2rem 5rem;
-}
-.bike_link{
-    display: block;
-    margin: 1rem;
-    color:black;
+button{
+    transition-duration: 0.4s;
+    padding: 15px 32px;
+    background-color: white;
+    color: black;
+    border: 2px solid #333;
+    margin: auto;
+    font-size: 1.2rem;
+    display: inline-block;
     text-decoration: none;
+}
+
+button:hover{
+    cursor: pointer;
+}
+.accessories_container{
+    padding-bottom: 10rem;
+    background-color: white;
+    min-height: 100vh;
+}
+
+.accessories_header{
+    text-align: center;
+    
+
+}
+.accessories_header_container{
+    margin-left: 2rem;
     font-size: 1.5rem;
 }
-
-.header_container{
-    background: white;
-    width: 400px;
+.accessories_header_img{
+    width: 75%;
     margin: auto;
-    border: 10px solid grey;
 }
 
-.bike_header{
-    color: white;
+.button_container{
     text-align: center;
-    font-size: 5rem;
-    margin: 0;
-    -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: black;
+    margin-top: 2rem;
 }
 
-.bike_grid{
+.content-container{
+    margin: auto;
+}
+
+
+.content-container{
+    margin: auto;
+}
+
+
+.test-div{
+    text-align: center;
+    width: 100%;
+    display: none;
+}
+
+.test-div.show{
+    display: block;
+}
+
+.accessories_grid{
     display: grid;
     text-align: center;
     margin: auto;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  }
  
- .bike_grid_items{
+ .accesories_grid_items{
     margin: auto;
 }
 
-.bike_card{
+.accessories_card{
     padding: 0;
     margin: 1rem;
     border: 1px solid grey;
@@ -58,8 +87,12 @@
     background: white;
     transition: 0.5s;
 }   
- .bike_img{
+ .accessories_img{
+     overflow: hidden;
+     object-fit: cover;
+     height: 20rem;
      width: 100%;
+     max-height: 100%;
      border-radius: 10px;
      border-bottom: none;
  }
@@ -69,70 +102,23 @@
      padding-left: 1rem;
     
  }
- .bike_card:hover{
-    cursor:pointer;
-    transition: 0.5s;
-    transform: scale(1.15);
-} 
 
-.for_hire{
-    padding-top: 5rem;
-    padding-bottom: 10rem;
-    border-top: 2px solid #333;
-}
+ .btn_active{
+     color: white;
+     border-color: white;
+     background-color: #333;
+ }
 
-.mountain_bikes{
-    padding-top: 10rem;
-    padding-bottom: 10rem;
-    border-top: 2px solid #333;
-}
-
-.road_bikes{
-    padding-top: 15rem;
-    padding-bottom: 10rem;  
-    border-top: 2px solid #333; 
-}
-
-
-    @media(max-width: 1000px){
-        .important_info{
-        margin: 2rem;
-        font-size: 1.5rem;
-        }
-        .break_up{
-            display: inline;
-        }
-        .bike_subcategories{
-            margin: 5rem ;
-        }
-        .header_container{
-            width: 300px;
-        }
-        .bike_card{
-            margin-left: 0.5rem;
-            width: 300px;
-        }
-        .bike_grid_items{
-            margin: auto;
-            width: 200px
-        }
-        .bike_header{
-            font-size: 2rem;
-        }
-        .bike_grid_items{
-            width: 300px;
-        }
-        .bike_card{
-            width: 300px;
-            margin: auto;
-            margin-top: 1rem;
-           
-        } 
-        
+ @media(max-width: 1000px){
+    button{
+        width: 50%;
+        margin: .5rem;
     }
-    @media only screen and (min-width: 620px){ 
-        .bike_grid{
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr, ));
-         }
-         
+    .accessories_header_img{
+        width: 100%;
     }
+    .accessories_header_container{
+        margin-left: 0;
+        font-size: 1.2rem;
+    }
+ }
