--- a/css/index.css
+++ b/css/index.css
@@ -102,7 +102,8 @@ a{
         max-width: 90%;
     }
     .header{
-        background-image:linear-gradient(
+        background-color: black;
+        /* background-image:linear-gradient(
             to right bottom,
             rgba(0, 0, 0, 0.9),
             rgba(0, 0, 0, 0.8)),
@@ -113,6 +114,6 @@ a{
         padding: 0 3rem 0 3rem;
         color: white;
         padding-top: 3rem;
-        text-transform: uppercase;
+        text-transform: uppercase; */
     }
 }
